Adding sample trained model

--- a/Urban Sound Classification in TX2.ipynb
+++ b/Urban Sound Classification in TX2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,22 +91,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(68, 13)"
+       "dtype('float64')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mfcc_feat.shape"
+    "mfcc_feat.dtype"
    ]
   },
   {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,12 +191,14 @@
     "    except Exception as e:\n",
     "        print(\"Error encountered while parsing file: \", file_name)\n",
     "        return pd.Series([None, None])\n",
+    "    if folder == 'Test':\n",
+    "        return pd.Series([mfcc_feat])\n",
     "    return pd.Series([mfcc_feat, row.Class])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {
     "scrolled": true
    },
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,11 +262,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp.to_csv(URBAN_SOUND_DIR+\"train_mfcc_transformed.csv\")"
+    "temp.to_json(URBAN_SOUND_DIR+\"train_mfcc_transformed.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = pd.read_json(URBAN_SOUND_DIR+\"train_mfcc_transformed.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NEXT TEST THE JSON LOADING FORMAT!!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#temp = pd.read_csv(URBAN_SOUND_DIR+\"train_mfcc_transformed.csv\", dtype={'feature': np.ndarray.dtype} )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['feature', 'label', 'label_encoded'], dtype='object')"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp.columns"
    ]
   },
   {
@@ -276,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +343,7 @@
        "(13,)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +373,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,21 +401,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = keras.Sequential([\n",
     "    keras.layers.Flatten(input_shape=(13,)),\n",
     "    keras.layers.Dense(128, activation=tf.nn.relu),\n",
-    "    keras.layers.Dense(60, activation=tf.nn.relu),\n",
+    "    keras.layers.Dense(70, activation=tf.nn.relu),\n",
     "    keras.layers.Dense(10, activation=tf.nn.softmax)\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,48 +426,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Train on 4891 samples, validate on 544 samples\n",
       "Epoch 1/10\n",
-      "5435/5435 [==============================] - 16s 3ms/step - loss: 1.4945 - acc: 0.5345\n",
+      "4891/4891 [==============================] - 12s 3ms/step - loss: 0.3730 - acc: 0.8808 - val_loss: 0.4959 - val_acc: 0.8419\n",
       "Epoch 2/10\n",
-      "5435/5435 [==============================] - 13s 2ms/step - loss: 0.9592 - acc: 0.6942\n",
+      "4891/4891 [==============================] - 13s 3ms/step - loss: 0.3471 - acc: 0.8929 - val_loss: 0.5172 - val_acc: 0.8346\n",
       "Epoch 3/10\n",
-      "5435/5435 [==============================] - 13s 2ms/step - loss: 0.7842 - acc: 0.7512\n",
+      "4891/4891 [==============================] - 12s 3ms/step - loss: 0.3219 - acc: 0.9021 - val_loss: 0.5147 - val_acc: 0.8346\n",
       "Epoch 4/10\n",
-      "5435/5435 [==============================] - 13s 2ms/step - loss: 0.6809 - acc: 0.7849\n",
+      "4891/4891 [==============================] - 12s 2ms/step - loss: 0.2945 - acc: 0.9115 - val_loss: 0.5024 - val_acc: 0.8456\n",
       "Epoch 5/10\n",
-      "5435/5435 [==============================] - 13s 2ms/step - loss: 0.6085 - acc: 0.8098: 3s - lo\n",
+      "4891/4891 [==============================] - 13s 3ms/step - loss: 0.2732 - acc: 0.9156 - val_loss: 0.5461 - val_acc: 0.8143\n",
       "Epoch 6/10\n",
-      "5435/5435 [==============================] - 13s 2ms/step - loss: 0.5518 - acc: 0.8243\n",
+      "4891/4891 [==============================] - 12s 2ms/step - loss: 0.2586 - acc: 0.9223 - val_loss: 0.5708 - val_acc: 0.8088\n",
       "Epoch 7/10\n",
-      "5435/5435 [==============================] - 13s 2ms/step - loss: 0.5047 - acc: 0.8403\n",
+      "4891/4891 [==============================] - 12s 3ms/step - loss: 0.2371 - acc: 0.9266 - val_loss: 0.5221 - val_acc: 0.8474\n",
       "Epoch 8/10\n",
-      "5435/5435 [==============================] - 13s 2ms/step - loss: 0.4627 - acc: 0.8557\n",
+      "4891/4891 [==============================] - 13s 3ms/step - loss: 0.2187 - acc: 0.9331 - val_loss: 0.5347 - val_acc: 0.8290\n",
       "Epoch 9/10\n",
-      "5435/5435 [==============================] - 13s 2ms/step - loss: 0.4252 - acc: 0.8651\n",
+      "4891/4891 [==============================] - 13s 3ms/step - loss: 0.1987 - acc: 0.9417 - val_loss: 0.5532 - val_acc: 0.8327\n",
       "Epoch 10/10\n",
-      "5435/5435 [==============================] - 14s 3ms/step - loss: 0.3923 - acc: 0.8771: 0s - loss: 0.3927 - ac\n"
+      "4891/4891 [==============================] - 12s 3ms/step - loss: 0.1888 - acc: 0.9452 - val_loss: 0.5591 - val_acc: 0.8346\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f6321a278>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f20187550>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X, y, epochs=10,batch_size=10,shuffle=False)"
+    "model.fit(X, y, epochs=10,batch_size=10,shuffle=False,validation_split=0.1)"
    ]
   },
   {
@@ -434,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,19 +494,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "`save_weights` requires h5py when saving in hdf5.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-d3427760f98f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# serialize weights to HDF5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./trained_models/hdf5/urban_sound_model.h5\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Saved model to disk\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/github/python_environments/soundflux/lib/python3.5/site-packages/tensorflow/python/keras/engine/network.py\u001b[0m in \u001b[0;36msave_weights\u001b[0;34m(self, filepath, overwrite, save_format)\u001b[0m\n\u001b[1;32m   1288\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msave_format\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'h5'\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mh5py\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1289\u001b[0m       raise ImportError(\n\u001b[0;32m-> 1290\u001b[0;31m           '`save_weights` requires h5py when saving in hdf5.')\n\u001b[0m\u001b[1;32m   1291\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msave_format\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'tf'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1292\u001b[0m       \u001b[0mcheck_filepath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfilepath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.index'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: `save_weights` requires h5py when saving in hdf5."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved model to disk\n"
      ]
     }
    ],
@@ -481,8 +524,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_temp = test_df.apply(parser_test,args=(('Test',4800)), axis=1)\n",
+    "test_temp = test_df.apply(parse_mfcc,args=('Test',4800), axis=1)\n",
     "test_temp.columns = ['feature']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_temp.to_json(URBAN_SOUND_DIR+\"test_mfcc_transformed.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First Submission/ Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test_avg = []\n",
+    "for x in temp_test.feature.tolist():\n",
+    "    X_test_avg.append(np.mean(x,axis=0))\n",
+    "X_test = np.array(X_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_prediction = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yt"
    ]
   },
   {
